@@ -147,14 +147,6 @@
 	<code>makeurl /tclp.gif</code> returns
 	http://[hostname]:[port]/tclp.gif.
       </li>
-
-      <li>
-	<code><b>rivet_info</b></code><br>
-
-	Prints information on the internals of the module in
-	HTML.  Currently, only the PID and size of the object
-	cache are reported.
-      </li>
       <!--
       <li>
       Note that these variables may be lists if more than one file
