@@ -22,8 +22,7 @@
 	    href="mailto:rivet-dev-subscribe@tcl.apache.org">rivet-dev-subscribe@tcl.apache.org</a>.</p>
 	</p>
 	<p>
-	  Currently, lists are not archived.  If you'd like to help
-	  out, let us know.
+	  The mailing list is archived at <a href="http://www.apachelabs.org">www.apachelabs.org</a>.
 	</p>
       </li>
     </ul>
